# lsys-pairwise

./: .gitignore  README.md  build_images.sh  docker-compose.yml  publish_images.sh
back/: Cargo.toml  Dockerfile  docker-compose.yml
back/docker-builder/: Dockerfile
back/src/: cfg.rs  db.rs  main.rs  model.rs  routes.rs  serde_enum.rs  server.rs  stats.rs
front/: .eslintrc.js  Dockerfile  README.md  index.html  package-lock.json  package.json
front/config/: dev.env.js
front/docker-builder/: Dockerfile
front/src/: App.vue  config.js  main.js
front/src/components/: Comparison.vue  ComparisonSlider.vue  Consent.vue  Intro.vue  LikertScale.vue  Pairwise.vue  Register.vue  Result.vue  Task.vue  ThankYou.vue
proxy/: Dockerfile  proxy.conf
scripts/: build_backend.sh  build_builders.sh  build_frontend.sh  build_images.sh  publish_builders.sh  publish_images.sh  vars.sh
stats/: stats.R
