[package]
name = "lsys-pairwise"
version = "0.1.0"
authors = ["Magnus Bjerke Vik <mbvett@gmail.com>"]

[dependencies]
rocket = "^0.3.2"
rocket_codegen = "^0.3.2"
rocket_cors = "^0.2.0"
serde = "^1.0.11"
serde_derive = "^1.0.11"
bson = "^0.10.0"
mongodb = "^0.3.3"
uuid = { version = "^0.5.1", features = ["serde", "v4"] }
rand = "^0.3.17"
clap = "^2.27.0"

[dependencies.rocket_contrib]
version = "^0.3.2"
default-features = false
features = ["json"]
